<resources>
    <string name="app_name">AEE</string>
    <string name="label_1">GreenFlag customers can create an account to access</string>
    <string name="label_2">Car health updates</string>
    <string name="label_3">Request a rescue online</string>
    <string name="label_4">Policy information</string>
    <string name="label_5">Create an account</string>
    <string name="label_6">Email address</string>
    <string name="label_7">Create password</string>
    <string name="label_8">Repeat password</string>
    <string name="password_hint">See criteria below</string>
    <string name="password_criteria">Your password should have a minimum of 8 characters and contain at least one number, one uppercase and one lower case letter. You can use special characters.</string>
    <string name="next_btn">Next</string>
    <string name="login_btn">Login</string>
    <string name="etr_pass">Password</string>
    <string name="btn_add">Add</string>
    <string name="hints1">Name</string>
    <string name="hints2">Username</string>
    <string name="hints3">dd/mm/yyyy</string>
    <string name="hints4">Country</string>
    <string name="hints5">Address</string>
    <string name="date_picker_result_value">%1$s/%2$s/%3$s</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
