<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.theappexperts.aee.MainActivity"
    android:background="@color/black">

    <Button
        android:id="@+id/btn_create"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginBottom="8dp"
        android:layout_marginHorizontal="20dp"
        android:background="@drawable/gradient_button_background"
        android:text="@string/label_5"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/label1"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="40dp"
        android:layout_marginTop="24dp"
        android:text="@string/label_1"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/img_logo" />

    <ImageView
        android:id="@+id/tick1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        app:layout_constraintStart_toStartOf="@+id/label1"
        app:layout_constraintTop_toBottomOf="@+id/label1"
        app:srcCompat="@drawable/tick" />

    <ImageView
        android:id="@+id/tick2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        app:layout_constraintStart_toStartOf="@+id/tick1"
        app:layout_constraintTop_toBottomOf="@+id/tick1"
        app:srcCompat="@drawable/tick" />

    <ImageView
        android:id="@+id/tick3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        app:layout_constraintStart_toStartOf="@+id/tick2"
        app:layout_constraintTop_toBottomOf="@+id/tick2"
        app:srcCompat="@drawable/tick" />

    <TextView
        android:id="@+id/label2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/label_2"
        android:layout_marginStart="24dp"
        app:layout_constraintStart_toEndOf="@+id/tick1"
        app:layout_constraintTop_toTopOf="@+id/tick1" />

    <TextView
        android:id="@+id/label3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/label_3"
        android:layout_marginStart="24dp"
        app:layout_constraintStart_toEndOf="@+id/tick2"
        app:layout_constraintTop_toTopOf="@+id/tick2" />

    <Button
        android:id="@+id/btn_login"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_below="@+id/img_logo"
        android:layout_marginBottom="8dp"
        android:layout_toEndOf="@+id/label2"
        android:background="@drawable/gradient_button_background"
        android:text="@string/login_btn"
        app:layout_constraintBottom_toTopOf="@+id/btn_create"
        app:layout_constraintEnd_toEndOf="@+id/btn_create"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/btn_create" />

    <TextView
        android:id="@+id/label4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:text="@string/label_4"
        app:layout_constraintStart_toEndOf="@+id/tick3"
        app:layout_constraintTop_toTopOf="@+id/tick3" />

    <ImageView
        android:id="@+id/img_logo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerInParent="true"
        android:paddingHorizontal="30dp"
        android:paddingTop="50dp"
        app:srcCompat="@drawable/logo_green_flag" />

</android.support.constraint.ConstraintLayout>
