<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black">

    <ImageView
        android:id="@+id/ivDP"
        android:layout_width="128dp"
        android:layout_height="128dp"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="32dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@mipmap/ic_launcher" />

    <EditText
        android:id="@+id/etName"
        style="@style/TextBoxes"
        android:layout_width="0dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:hint="@string/hints1"
        app:layout_constraintEnd_toStartOf="@+id/ivDP"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/ivDP" />

    <EditText
        android:id="@+id/etUsername"
        style="@style/TextBoxes"
        android:layout_width="0dp"
        android:layout_marginEnd="8dp"
        android:layout_marginTop="24dp"
        android:ems="10"
        android:hint="@string/hints2"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toStartOf="@+id/ivDP"
        app:layout_constraintStart_toStartOf="@+id/etName"
        app:layout_constraintTop_toBottomOf="@+id/etName" />

    <EditText
        android:id="@+id/etDOB"
        style="@style/TextBoxes"
        android:layout_width="0dp"
        android:layout_marginTop="24dp"
        android:ems="10"
        android:hint="@string/hints3"
        android:inputType="textPersonName"
        android:focusedByDefault="false"
        android:focusableInTouchMode="false"
        app:layout_constraintEnd_toEndOf="@+id/etUsername"
        app:layout_constraintStart_toStartOf="@+id/etUsername"
        app:layout_constraintTop_toBottomOf="@+id/etUsername" />

    <Spinner
        android:id="@+id/spinner"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginTop="24dp"
        android:autofillHints="@string/hints4"
        android:background="#7c7c7c"
        app:layout_constraintEnd_toEndOf="@+id/etDOB"
        app:layout_constraintStart_toStartOf="@+id/etDOB"
        app:layout_constraintTop_toBottomOf="@+id/etDOB" />

    <RadioGroup
        android:id="@+id/rgGender"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:checkedButton="@+id/rbtnMale"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="@+id/spinner"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/spinner"
        app:layout_constraintTop_toBottomOf="@+id/spinner">

        <RadioButton
            android:id="@+id/rbtnMale"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Male" />

        <RadioButton
            android:id="@+id/rbtnFemale"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:text="Female" />
    </RadioGroup>

    <EditText
        android:id="@+id/etAddress"
        style="@style/TextBoxes"
        android:layout_width="0dp"
        android:layout_marginTop="24dp"
        android:ems="10"
        android:hint="@string/hints5"
        android:inputType="textPostalAddress"
        android:singleLine="false"
        app:layout_constraintEnd_toEndOf="@+id/spinner"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/rgGender"
        app:layout_constraintTop_toBottomOf="@+id/rgGender" />

    <Button
        android:id="@+id/btn_complete"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:text="Complete"
        android:background="@drawable/gradient_button_background"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</android.support.constraint.ConstraintLayout>